# mailfilter

./: Cargo.toml  README.md
src/: filter.rs  mail.rs  main.rs
