[package]
name = "mailfilter"
version = "0.1.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.33"
mailbox = { version = "*", git = "https://github.com/j16r/rust-mailbox.git" }
mime = "0.3"
nom = "5.0"
regex = "1.0.1"
regex-syntax = "*"
thiserror = "1.0.23"
yz-nomstr = "0.3.0"
